Add php.ini azure block only if not already defined

--- a/Resources/role_template/php/php.ini
+++ b/Resources/role_template/php/php.ini
@@ -19,3 +19,6 @@
 ; %EXT% will be replaced by the absolute path to PHP's
 ; extension folder.
 ; zend_extension=%EXT%
+error_log = c:/logs/php_error.log
+extension=php_fileinfo.dll
+extension=php_intl.dll
