--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
-    "name": "beberlei/azure-distribution-bundle",
+    "name": "brainsonic/azure-distribution-bundle",
     "description": "Integration of Windows Azure SDK and workflows into Symfony applications.",
     "license": "MIT",
     "type": "symfony-bundle",
     "authors": [
-        {"name": "Benjamin Eberlei", "email": "kontakt@beberlei.de"}
+        {"name": "Benjamin Eberlei", "email": "kontakt@beberlei.de"},
+        {"name": "Stéphane Escandell", "email": "stephane.escandell@gmail.com"}
     ],
     "require": {
-        "symfony/symfony": ">=2.3.0",
-        "microsoft/windowsazure": "dev-master"
+        "symfony/symfony": "~2.3",
+        "microsoft/windowsazure": "0.4.*"
     },
     "repositories": [
         {
