--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "symfony/symfony": "~2.3",
-        "microsoft/windowsazure": "0.4.*"
+        "microsoft/windowsazure": "dev-master"
     },
     "repositories": [
         {
