Update Azure target (for Cloud Services deployment):  - SDK 2.3 compatible (activated by default)  - Running on osFamily 4 (latest version available)  - Bring with PHP5.5  - PDOSQLSrv driver embeded and activated  - OpCache embeded and activated  - APCu embeded and activated  - FIX vendors file generation

--- a/Resources/role_template/php/php.ini
+++ b/Resources/role_template/php/php.ini
@@ -19,6 +19,17 @@
 ; %EXT% will be replaced by the absolute path to PHP's
 ; extension folder.
 ; zend_extension=%EXT%
+
+date.timezone=Europe/Paris
 error_log = c:/logs/php_error.log
 extension=php_fileinfo.dll
 extension=php_intl.dll
+extension=php_apcu.dll
+
+[APC]
+apc.enabled=1
+apc.serializer=php
+
+extension=php_pdo_sqlsrv_55_nts.dll
+extension=php_sqlsrv_55_nts.dll
+extension=php_opcache.dll
