--- a/Resources/role_template/web.config
+++ b/Resources/role_template/web.config
@@ -23,5 +23,14 @@
                 </rule>
             </rules>
         </rewrite>
+        <httpProtocol>
+            <customHeaders>
+                <add name="p3p" value="CP=&quot;IDC DSP COR ADM DEVi TAIi PSA PSD IVAi IVDi CONi HIS OUR IND CNT&quot;"/>
+            </customHeaders>
+        </httpProtocol>
+        <staticContent>
+            <remove fileExtension=".woff" />
+            <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+        </staticContent>
     </system.webServer>
 </configuration>
